--- a/website.html
+++ b/website.html
@@ -53,8 +53,8 @@
                         <h5>skills</h5>
                         <div class="pra">
                             <li>Programming languages: e.g. Python, Java, C,  JavaScript, Html ,css</li>
-                            <li></li>
-                            <li></li>
+                            <li>Algorithms and data structures</li>
+                            <li>Object-oriented programming</li>
                             <li></li>
                             <li></li>
                             
