github link added

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <p>Amirhossein Mansouri</p>
             <p></p>
             <div class="social">
-                <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="mailto:amir01mn@my.yorku.ca"><i class="fa-solid fa-envelope"></i></a> 
+                <a href="https://github.com/amir01mn"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
 
