--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     </head>
     <body>
 
-        <div class="org">
+        <div class="org" id="home"> 
             <nav>
                 <h2 class="logo">my<span>Portfolio</span></h2>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#project">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#social">Contact Us</a></li>
                 </ul>
                 <a href="#" class="btn">Click</a>
             </nav>
@@ -37,7 +37,7 @@
         </div> 
 
         <!----About start section-->
-        <section class="about">
+        <section class="about" id="about">
             <div class="main">
                 <!-- <img src="/myWebsite/abt.jpg" > -->
                 <div class="about-text">
@@ -48,8 +48,8 @@
                     </p>
                     
                     <button type="button">Let's Talk</button>
-                    <div class="skills">
-                        <i class="fa-solid fa-bars-progress"></i>
+                    <div class="skills" id="skills">
+                        <!-- <i class="fa-solid fa-bars-progress"></i> -->
                         <h5>skills</h5>
                         <div class="pra">
                             <li>Programming languages: e.g. Python, Java, C,  JavaScript, Html ,css</li>
@@ -64,8 +64,8 @@
             </div>
         </section>
 
-        <!--service section-->
-        <div class="service">
+        <!--project section-->
+        <div class="project" id="project">
             <div class="title">
                 <h2>My Projects</h2>
             </div>
@@ -121,10 +121,10 @@
         <footer>
             <p>Amirhossein Mansouri</p>
             <p></p>
-            <div class="social">
+            <div class="social" id="social">
                 <a href="mailto:amir01mn@my.yorku.ca"><i class="fa-solid fa-envelope"></i></a> 
                 <a href="https://github.com/amir01mn"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="www.linkedin.com/in/amirhossein-mansouri-93509a232"><i class="fa-brands fa-linkedin"></i></a>
             </div>
 
         </footer>
