--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 </div>
             </div>
         </section>
+        
 
         <!--project section-->
         <div class="project" id="project">
@@ -122,6 +123,21 @@
                 </div>
             </div>
         </div>
+        <section class="why-me" id="why-me">
+            <div class="main">
+                <div class="video-container">
+                    <video controls>
+                        <source src="https://drive.google.com/file/d/1-VkB5VOLGO3uHTlqkurnfdHpTOgjUry_/view?usp=share_link" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="why-me-text">
+                    <h2>Why Choose Me?</h2>
+                    <p>I am a dedicated and passionate computer science student with a strong foundation in programming and problem-solving. I have experience with various programming languages and frameworks, as well as hands-on knowledge of cloud computing and computer architecture. My projects demonstrate my ability to deliver high-quality solutions, and I am eager to continue learning and growing in the field of technology.</p>
+                </div>
+            </div>
+        </section>
+        
 
         <!---Contact me-->
         <div class="contact-me">
