--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </video>
                 </div>
                 <div class="why-me-text">
-                    <h2>Why Choose Me?</h2>
+                    <h2>Why Me?</h2>
                     <p>I am a dedicated and passionate computer science student with a strong foundation in programming and problem-solving. I have experience with various programming languages and frameworks, as well as hands-on knowledge of cloud computing and computer architecture. My projects demonstrate my ability to deliver high-quality solutions, and I am eager to continue learning and growing in the field of technology.</p>
                 </div>
             </div>
